--- a/web-components/src/index.html
+++ b/web-components/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Create message</title>
+    <title>lGram</title>
 </head>
 <body>
     <message-form action="/">
